# tos_classifier

./: .gitignore  README.md  main.py  pyproject.toml
data/: clauses.csv
data/augmented_datasets/: README.md  cuad_mapped_hf.csv  opp115_mapped_hf.csv
data/preprocessed/: test.csv  train.csv  val.csv
data/preprocessing/: preprocessing.ipynb
data/raw/sample_tos/: google_tos.txt  spotify_tos.txt
demo/: app.py
models/legal_bert_checkpoint/: config.json  tokenizer.json
notebooks/: 01_eda.ipynb  02_testing_balancing_strategies.ipynb  03_mapping_CUAD.ipynb  03_mapping_opp115.ipynb  04_mapping_CUAD.ipynb  04_mapping_opp115.ipynb  README.md
results/: BASELINES.md  test_metrics_svm_rbf.json  test_predictions.csv  test_summary.csv
results/legalbert_test/: test_confusion_matrix.csv  test_metrics.json  test_predictions.csv  test_report.txt
results/test/: test_metrics_logreg.json  test_metrics_random_forest.json  test_report_logreg.txt  test_report_random_forest.txt  test_report_svm_rbf.txt
src/: confusion.py  dataset.py  eval_legalbert.py  evaluate.py  explain.py  features.py  fetch_clauses.py  fetch_data.py  inference.py  models.py  preprocess.py  segment.py  split_data.py  summarize.py  test_eval.py  train.py
