[project]
name = "tos-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "spacy>=3.8.14",
    "textstat>=0.7.13",
    "transformers>=4.44.0",
    "torch>=2.2.0",
    "bs4>=0.0.2",
    "gradio>=6.13.0",
]
